--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -1,4 +1,4 @@
-<div ng-include="'/views/actor.html'" id="actorView"></div>
+<div ng-include="'views/actor.html'" id="actorView"></div>
 
 <leaflet center="centerMarker" width="100%" resize markers="markers" layers="layers" event-broadcast="events"></leaflet>
 <div id="filters">
