--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -323,9 +323,9 @@ vg-controls{
 .caption{
     // position: absolute;
     // bottom: 0;
-    //max-height: 90px;
     // background: rgba(0,0,0,.6);
     // color: white;
+    max-height: 90px;
     width: 100%;
     padding:10px;
     overflow: scroll;
