--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -7,8 +7,8 @@
                     <div class="col-sm-5">
                         <div class="page-header">
                             <h1>{{actor.title}}</h1>
-                            <h2>{{actor.start_time|amDateFormat:'MMM Do YYYY'}}<br>
-                            {{actor.start_time|amDateFormat:'h:mm a'}} <span ng-show="!actor.isInstant">- {{actor.end_time|amDateFormat:'h:mm a'}}</span></h2>
+                            <h2>{{actor.start_time|amDateFormat:'MMM D, YYYY'}}<br>
+                            {{actor.start_time|amDateFormat:'h:mm a'}} <span ng-show="!actor.isInstant">&ndash; {{actor.end_time|amDateFormat:'h:mm a'}}</span></h2>
                         </div>
                         <div class="text-window" ng-bind-html="actor.description"></div>
                     </div>
