use correct font for carousel icons (not videogular ones)

--- a/frontend/app/styles/fonts.css
+++ b/frontend/app/styles/fonts.css
@@ -35,6 +35,9 @@
 .icon-newspaper:before {
     content: "\e603";
 }
+.icon-arrow-right:before {
+    content: "\e605";
+}
 .icon-arrow-left:before {
     content: "\e600";
 }
