--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -291,12 +291,12 @@ button.close{
     padding: 5px;
 }
 .rn-carousel-control.rn-carousel-control-next:before{
-    content: "\e600";
-    font-family: icomoon;
+    content: "\e605";
+    font-family: campusmedius;
 }
 .rn-carousel-control.rn-carousel-control-prev:before{
-    content: "\e601";
-    font-family: icomoon;
+    content: "\e600";
+    font-family: campusmedius;
 }
 .event-carousel{
     width:100%;
