get media object thing working

--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -405,6 +405,7 @@ vg-controls{
     line-height: 1.7;
     border-radius: 5px;
     display: inline;
+    cursor: pointer;
     &:before{
         margin-right: 5px;
         font-family: 'campusmedius';
