--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -10,7 +10,7 @@
                             <h2>{{actor.start_time|amDateFormat:'MMM D, YYYY'}}<br>
                             {{actor.start_time|amDateFormat:'h:mm a'}} <span ng-show="!actor.isInstant">&ndash; {{actor.end_time|amDateFormat:'h:mm a'}}</span></h2>
                         </div>
-                        <!-- <div class="text-window" id="actor-description"></div> -->
+                        <div class="text-window" id="actor-description"></div>
                     </div>
                     <div class="col-sm-7">
                         <ul rn-carousel rn-carousel-indicator rn-carousel-control class="image carousel ng-cloak event-carousel">
