--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -424,3 +424,23 @@ vg-controls{
 .media-object-document:before{
     content:"\e603";
 }
+
+
+.proportional-container {
+    background: red;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    float: left;
+    height: 0;
+    background: #EAEAEA; 
+
+    iframe {
+        position: absolute;
+        left: 0;
+        border: none;
+        box-sizing: border-box;
+        width: 100%;
+        height: 100%; 
+    }
+}
