--- a/frontend/app/views/team.html
+++ b/frontend/app/views/team.html
@@ -2,20 +2,20 @@
     <div class="row">
         <div class="col-sm-6" style="margin-top:75px;">
             <div class="row" style="position:relative;">
-                <div class="member member-1 zoomable" ng-class="{active: current==members[0].slug}" style="" ng-click="current=members[0].slug">
-                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[0].portrait}}">
+                <div class="member member-1 zoomable" ng-class="{active: current==members[3].slug}" style="" ng-click="current=members[3].slug">
+                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[3].portrait}}">
                 </div>
-                <div class="member member-2 zoomable" ng-class="{active: current==members[4].slug}" style="" ng-click="current=members[4].slug">
-                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[4].portrait}}">
-                </div>
-                <div class="member member-3 zoomable" ng-class="{active: current==members[2].slug}" style="" ng-click="current=members[2].slug">
-                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[2].portrait}}">
-                </div>
-                <div class="member member-4 zoomable" ng-class="{active: current==members[1].slug}" style="" ng-click="current=members[1].slug">
+                <div class="member member-2 zoomable" ng-class="{active: current==members[1].slug}" style="" ng-click="current=members[1].slug">
                     <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[1].portrait}}">
                 </div>
-                <div class="member member-5 zoomable" ng-class="{active: current==members[3].slug}" style="" ng-click="current=members[3].slug">
-                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[3].portrait}}">
+                <div class="member member-3 zoomable" ng-class="{active: current==members[4].slug}" style="" ng-click="current=members[4].slug">
+                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[4].portrait}}">
+                </div>
+                <div class="member member-4 zoomable" ng-class="{active: current==members[0].slug}" style="" ng-click="current=members[0].slug">
+                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[0].portrait}}">
+                </div>
+                <div class="member member-5 zoomable" ng-class="{active: current==members[2].slug}" style="" ng-click="current=members[2].slug">
+                    <img class="img-responsive" ng-src="{{STATIC_URL}}{{members[2].portrait}}">
                 </div>
                 <div class="connector-line vertical-connector"></div>
                 <div class="connector-line angled-connector"></div>
@@ -30,7 +30,7 @@
         </div>
         <div class="col-sm-6" style="margin-top:125px;padding:50px;">
             <div ng-repeat="member in members">
-                <div class="bio" ng-bind-html="member.bio" ng-show="current == member.slug"></div>
+                <div class="bio" ng-bind-html="trustHtml(member.bio)" ng-show="current == member.slug"></div>
             </div>
         </div>
     </div>
