trying to get paths working

--- a/frontend/app/views/map.html
+++ b/frontend/app/views/map.html
@@ -1,6 +1,6 @@
 <div ng-include="'/views/actor.html'" id="actorView"></div>
 
-<leaflet center="centerMarker" width="100%" resize markers="markers" layers="layers" event-broadcast="events"></leaflet>
+<leaflet center="centerMarker" width="100%" resize markers="markers" paths="paths" layers="layers" event-broadcast="events"></leaflet>
 <div id="filters">
     <!--p><select ng-model="historicalFilter" ng-options="value for value in historical" ng-change="filterActors()"></select></p-->
 
