--- a/frontend/app/views/about.html
+++ b/frontend/app/views/about.html
@@ -4,7 +4,7 @@
             <div class="page-header">
                 <h1>About</h1>
             </div>
-            <div ng-bind-html="page.body"></div>
+            <div ng-bind-html="page.body" class="serify"></div>
         </div>
     </div>
 </div>
