--- a/frontend/app/views/actor.html
+++ b/frontend/app/views/actor.html
@@ -9,7 +9,7 @@
                     <div class="col-sm-5">
                         <div class="page-header">
                             <h1>{{actor.title}}</h1>
-                            <h2>{{actor.start_time|amDateFormat:'MMM D, YYYY'}}<br>
+                            <h2 class="sansy">{{actor.start_time|amDateFormat:'MMM D, YYYY'}}<br>
                             <p>{{actor.start_time|amDateFormat:'h:mm a'}} <span ng-show="!actor.isInstant">&ndash; {{actor.end_time|amDateFormat:'h:mm a'}}</span></p></h2>
                         </div>
                         <div class="text-window" id="actor-description"></div>
@@ -32,7 +32,7 @@
                                     <img ng-src="http://campusmedius.net/{{obj.url}}">
                                 </div>
 
-                                <div class="caption" ng-bind-html="trustHtml(obj.caption)"></div>
+                                <div class="caption sansy" ng-bind-html="trustHtml(obj.caption)"></div>
                             </li>
                         </ul>
                     </div>
