--- a/frontend/app/styles/styles.scss
+++ b/frontend/app/styles/styles.scss
@@ -57,21 +57,24 @@ hr{
 }
 p{
     font-family: $bodyFont;
+    line-height: 1.5;
 }
 .serify{
     font-family: $bodyFont;
+    line-height: 1.5;
 }
 .sansy, .sansy p{
     font-family: $titleFont;
+    line-height: 1.1;
 }
-a{
+a, .btn-explore {
     color:#999;
+    text-decoration: underline;
     transition: .3s;
     -webkit-transition: .3s;
 }
-a:hover{
+a:hover, .btn-explore:hover {
     color:black;
-    text-decoration: underline;
 }
 blockquote, blockquote p{
     border:none;
@@ -95,6 +98,7 @@ blockquote, blockquote p{
     color:white;
     font-family: $titleFont;
     font-size:23px;
+    text-decoration: none;
 }
 .nav > li > a:hover{
     border-bottom: 1px solid #666;
@@ -234,10 +238,12 @@ button.close{
 }
 /* leaflet */
 .btn-explore{
-    text-decoration: underline;
-    font-size: 18px;
-    font-family: $titleFont;
-    font-weight: bold;
+    color:#999 !important;
+    font-size: 16px;
+    font-family: $bodyFont;
+}
+.btn-explore:hover {
+    color:black !important;
 }
 .leaflet-container a.leaflet-popup-close-button {
     padding: 8px 4px 0 0;
@@ -348,10 +354,6 @@ vg-controls{
     width: 100%;
     padding:20px;
     font-size: 14px;
-    a{
-        font-weight: bold;
-        text-decoration: underline;
-    }
 }
 
 .member{
@@ -419,7 +421,6 @@ vg-controls{
 /*media objects */
 .media-object{
     padding: 3px 5px;
-    line-height: 2  ;
     border-radius: 5px;
     display: inline;
     cursor: pointer;
